--- a/UPSCaseStudy/MainWindow.xaml
+++ b/UPSCaseStudy/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UPSCaseStudy"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="CanResize">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
     <Grid Margin="0,10,0,-10" RenderTransformOrigin="0.505,0.676">
         <Label x:Name="lblEmployeeName" Content="Name :" Margin="49,82,0,0" HorizontalAlignment="Left" Width="100" Height="33" VerticalAlignment="Top"/>
         <Label x:Name="lblEmployeeEmail" Content="Email :" Margin="49,120,0,0" HorizontalAlignment="Left" Width="100" Height="33" VerticalAlignment="Top"/>
